--- a/SangueAmigo2 (2)/SangueAmigo2 (2)/SangueAmigo2/SangueAmigo2/pom.xml
+++ b/SangueAmigo2 (2)/SangueAmigo2 (2)/SangueAmigo2/SangueAmigo2/pom.xml
@@ -18,5 +18,5 @@
             <version>8.0.19</version>
         </dependency>
     </dependencies>
-    <name>SangueAmigo</name>
+    <name>Sangue_Amigo</name>
 </project>
